(MSVC) Compile threads.c as C++

--- a/msvc/msvc-2003/msvc-2003.vcproj
+++ b/msvc/msvc-2003/msvc-2003.vcproj
@@ -125,6 +125,18 @@
 			</File>
 			<File
 				RelativePath="..\..\threads.c">
+				<FileConfiguration
+					Name="Debug|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						CompileAs="2"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						CompileAs="2"/>
+				</FileConfiguration>
 			</File>
 			<Filter
 				Name="mednafen"
