(MSVC 2003) Got it linking

--- a/msvc/msvc-2003/msvc-2003.vcproj
+++ b/msvc/msvc-2003/msvc-2003.vcproj
@@ -332,6 +332,250 @@
 						RelativePath="..\..\mednafen\cdrom\SimpleFIFO.cpp">
 					</File>
 				</Filter>
+				<Filter
+					Name="tremor"
+					Filter="">
+					<File
+						RelativePath="..\..\mednafen\tremor\bitwise.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\block.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\codebook.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\floor0.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\floor1.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\framing.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\info.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\ivorbisfile_example.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\mapping0.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\mdct.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\registry.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\res012.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\sharedbook.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\synthesis.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\vorbisfile.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\mednafen\tremor\window.c">
+						<FileConfiguration
+							Name="Debug|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32">
+							<Tool
+								Name="VCCLCompilerTool"
+								CompileAs="1"/>
+						</FileConfiguration>
+					</File>
+				</Filter>
 			</Filter>
 		</Filter>
 		<Filter
