Split up misc functions into mednafen/cdrom/misc.cpp

--- a/Makefile.common
+++ b/Makefile.common
@@ -86,6 +86,7 @@ SOURCES_CXX += $(MEDNAFEN_DIR)/cdrom/CDAccess.cpp \
 	$(MEDNAFEN_DIR)/cdrom/lec.cpp \
 	$(MEDNAFEN_DIR)/cdrom/SimpleFIFO.cpp \
 	$(MEDNAFEN_DIR)/cdrom/audioreader.cpp \
+	$(MEDNAFEN_DIR)/cdrom/misc.cpp \
 	$(MEDNAFEN_DIR)/cdrom/cdromif.cpp
 
 SOURCES_C += \
