--- a/Makefile.common
+++ b/Makefile.common
@@ -83,7 +83,6 @@ SOURCES_CXX += $(MEDNAFEN_DIR)/cdrom/CDAccess.cpp \
 	$(MEDNAFEN_DIR)/cdrom/CDAccess_Image.cpp \
 	$(MEDNAFEN_DIR)/cdrom/CDAccess_CCD.cpp \
 	$(MEDNAFEN_DIR)/cdrom/CDUtility.cpp \
-	$(MEDNAFEN_DIR)/cdrom/lec.cpp \
 	$(MEDNAFEN_DIR)/cdrom/SimpleFIFO.cpp \
 	$(MEDNAFEN_DIR)/cdrom/audioreader.cpp \
 	$(MEDNAFEN_DIR)/cdrom/misc.cpp \
@@ -92,6 +91,7 @@ SOURCES_CXX += $(MEDNAFEN_DIR)/cdrom/CDAccess.cpp \
 SOURCES_C += \
 	$(MEDNAFEN_DIR)/cdrom/galois.c \
 	$(MEDNAFEN_DIR)/cdrom/l-ec.c \
+	$(MEDNAFEN_DIR)/cdrom/lec.c \
 	$(MEDNAFEN_DIR)/cdrom/recover-raw.c \
 	$(MEDNAFEN_DIR)/cdrom/edc_crc32.c
 endif
