--- a/Makefile.common
+++ b/Makefile.common
@@ -18,7 +18,6 @@ else
 	$(CORE_EMU_DIR)/sio.cpp \
 	$(CORE_EMU_DIR)/cpu.cpp \
 	$(CORE_EMU_DIR)/gte.cpp \
-	$(CORE_EMU_DIR)/dis.cpp \
 	$(CORE_EMU_DIR)/cdc.cpp \
 	$(CORE_EMU_DIR)/spu.cpp \
 	$(CORE_EMU_DIR)/gpu.cpp \
@@ -32,6 +31,11 @@ else
 	$(CORE_EMU_DIR)/input/memcard.cpp \
 	$(CORE_EMU_DIR)/input/multitap.cpp \
 	$(CORE_EMU_DIR)/input/mouse.cpp
+endif
+
+ifeq ($(DEBUG), 1)
+	SOURCES_CXX += \
+	$(CORE_EMU_DIR)/dis.cpp
 endif
 
 ifeq ($(NEED_THREADING), 1)
