--- a/Makefile.common
+++ b/Makefile.common
@@ -139,7 +139,8 @@ SOURCES_C += $(LIBRETRO_DIR)/file/retro_file.c \
 ifeq ($(NEED_THREADING), 1)
 SOURCES_C += $(LIBRETRO_DIR)/rthreads/rthreads.c \
 				 $(LIBRETRO_DIR)/rthreads/async_job.c \
-				 $(LIBRETRO_DIR)/rthreads/rsemaphore.c
+				 $(LIBRETRO_DIR)/rthreads/rsemaphore.c \
+				 $(LIBRETRO_DIR)/queues/task_queue.c
 endif
 
 endif
